# pdf_rag_chat

./: .env_sample  .gitignore  README.md  docker-compose.yml
src/: Dockerfile  pyproject.toml  streamlit.py
src/app/: celery.py  database.py  schema.py  server.py  settings.py  vectorstore.py
src/app/api/: knowledge_document.py
src/app/bo/: knowledge_document.py
src/app/models/: knowledge_document.py
src/app/tasks/: knowledge_document.py
src/scripts/: create_index.py
src/tests/: test_knowledge_document.py
